# go-cam-analysis

./: pyproject.toml
data/: cams-with-reactome.tsv
notebooks/: visualize.py
src/cam_interaction/: __init__.py  cli.py
src/cam_interaction/datamodel/: model.py  model.yaml
